--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,5 @@
+@import "./css/fonts/aspekta-font.css";
+@import "./css/fonts/cabinet-grotesk-font.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
