--- a/app/routes/$slug/styles.css
+++ b/app/routes/$slug/styles.css
@@ -1,14 +1,39 @@
+.container-slug-blg {
+  background-color: rgb(16, 16, 20);
+  color: white;
+}
+
 .slug-blog {
   font-family: CabinetGrotesk, Sora, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .slug-blog h1 {
-  font-size: 3.2rem;
+  font-size: 3.25rem;
   line-height: 4rem;
   margin-bottom: 3rem;
+  font-weight: 600;
+  color: rgb(217 227 234);
 }
 
 .slug-blog .slug-blog-content h2 {
   font-size: 2.4rem;
   margin-bottom: 1.5rem;
+}
+
+.slug-blog .slug-blog-content p {
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+  color: rgb(155 169 180);
+}
+
+.slug-blog .slug-blog-content strong {
+  font-weight: 500;
+}
+
+.slug-blog .slug-blog-content ul {
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+  color: rgb(155 169 180);
+  list-style: disc;
+  padding-left: 28px;
 }
