--- a/app/routes/$slug/styles.css
+++ b/app/routes/$slug/styles.css
@@ -1,6 +1,7 @@
 .container-slug-blg {
   background-color: rgb(16, 16, 20);
   color: white;
+  color: rgb(155 169 180);
 }
 
 .slug-blog {
@@ -20,10 +21,23 @@
   margin-bottom: 1.5rem;
 }
 
+@media (max-width: 787px) {
+  .slug-blog h1 {
+    font-size: 2.2rem;
+    line-height: 2.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .slug-blog .slug-blog-content h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+
 .slug-blog .slug-blog-content p {
   font-size: 1.125rem;
   margin-bottom: 1rem;
-  color: rgb(155 169 180);
 }
 
 .slug-blog .slug-blog-content strong {
@@ -33,7 +47,11 @@
 .slug-blog .slug-blog-content ul {
   font-size: 1.125rem;
   margin-bottom: 1rem;
-  color: rgb(155 169 180);
   list-style: disc;
   padding-left: 28px;
+}
+
+.slug-blog .slug-blog-content li {
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
 }
