--- a/app/routes/mentorias1a1/styles.css
+++ b/app/routes/mentorias1a1/styles.css
@@ -8,6 +8,7 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Estilo para quitar las flechas en Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+  appearance: none;
 }
 
 * {
