--- a/app/routes/$slug/styles.css
+++ b/app/routes/$slug/styles.css
@@ -152,10 +152,21 @@
 }
 
 .slug-blog-content blockquote {
-  border-inline-start: 4px solid #ffffff;
   margin-inline-start: 1rem;
   padding-inline-start: 1rem;
   margin-block-end: 2rem;
+
+  @apply relative;
+}
+
+.slug-blog-content blockquote::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 4px;
+  @apply bg-gradient-pink;
 }
 
 .slug-blog-content a {
