refactor: center imgs

--- a/app/routes/$slug/styles.css
+++ b/app/routes/$slug/styles.css
@@ -147,8 +147,9 @@
 }
 
 .slug-blog-content img {
-  width: 100%;
+  max-width: 100%;
   margin-block-end: 2rem;
+  @apply mx-auto;
 }
 
 .slug-blog-content blockquote {
@@ -174,11 +175,6 @@
   transition: transform 0.5s ease-in-out;
   display: inline-block;
   @apply border-b border-pink-500 font-bold text-white relative hover:-translate-y-1;
-}
-
-.slug-blog-content img {
-  width: 100%;
-  margin-block-end: 0rem;
 }
 
 .slug-blog-content a::after {
